.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__User_Guide__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>xcdhcm__Permission_set_name__c</fullName>
        <label>Permission set name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Profile__c</fullName>
        <label>Profile</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Url__c</fullName>
        <label>Url</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>User Guide</label>
</CustomObject>